# otne

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.zh.md  你好宇宙.otne  更新日志.md
.github/workflows/: build-linux.yml  build-windows.yml
1/src/: otne_file.cpp  otne_file.hpp  otne_lexer.cpp  otne_main.cpp  otne_utf8.hpp
Otne/: CMakeLists.txt  Otne.cpp  OtneFile.h  Otne_utf8.h
Otne/OtneFile/: OtneFile.cpp  OtneFile.h
Otne/lexer/: lexer.cpp  lexer.h
Otne/src/: main.cpp  mainOtne.cpp  otne.cpp  otneFile.cpp  otneFile.h  otneLexer.cpp  otneLexer.h  otne_file.cpp  otne_file.hpp  otne_lexer.cpp  otne_lexer.hpp  otne_main.cpp  otne_utf8.h
doc/: test.te  更新日志.md
language/: zh_cn.toml
md/: otne.md
otne/: CMakeLists.txt
otne/src/: otne.hpp  otne_file.hpp  otne_lexer.cpp  otne_lexer.hpp  otne_main.cpp  otne_utf8.hpp
resources/: HelloUniverse.otne  README.en.md  更新日志.md
resources/code/: HelloUniverse.otne  HelloWorld.otne  code.otne
resources/md/: otne.md
z_code/: HelloUniverse.otne  code.otne
